Fix the overlap problem
Since the dropdown menu and the post entry-link both have the same
z-index value `1`, as post element appear later in the HTML structure,
so it will place above the dropdown menu, so we couldn't click the
dropdown menu if it overlap with content title.

--- a/assets/css/extended/header.css
+++ b/assets/css/extended/header.css
@@ -10,7 +10,7 @@
     box-shadow: 0px 8px 16px 0px var(--border);
     border-radius: 8px;
     line-height: 1.3rem;
-    z-index: 1;
+    z-index: 2;
 }
 
 .dropdown:hover .dropdown-content {
